# bitcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: api.rs  cache.rs  cli.rs  config.rs  error.rs  io.rs  main.rs
