[package]
name = "bitcli"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2021"
description = "Simple CLI tool for URL shortening via Bitly"
repository = "https://github.com/matyama/bitcli"
license = "MIT"
keywords = ["bitly", "cli", "url", "shortener"]
rust-version = "1.74"

[profile.release]
debug = true
codegen-units = 1

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
futures-util = "0.3.30"
hide = { version = "0.1", features = ["serde"] }
home = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
xdg = "2.5"

[dev-dependencies]
rstest = "0.21.0"
tempfile = "3.10.1"
