[package]
name = "bitcli"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2021"
description = "Simple CLI tool for URL shortening via Bitly"
repository = "https://github.com/matyama/bitcli"
license = "MIT OR Apache-2.0"
keywords = ["bitly", "cli", "url", "shortener"]
rust-version = "1.74"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
futures-util = { version = "0.3.30", default-features = false }
hide = { version = "0.1", default-features = false, features = ["serde"] }
home = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
    "default-tls",
    "charset",
    "http2",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
] }
thiserror = "1.0"
tokio = { version = "1.40", default-features = false, features = [
    "macros",
    "net",
    "parking_lot",
    "rt",
] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
] }
url = { version = "2.5", features = ["serde"] }
xdg = "2.5"

[dev-dependencies]
rstest = { version = "0.22.0", default-features = false }
tempfile = "3.12.0"
tokio-test = "0.4.4"
wiremock = "0.6.1"
