[package]
name = "bitcli"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2021"
description = "Simple CLI tool for URL shortening via Bitly"
repository = "https://github.com/matyama/bitcli"
license = "MIT OR Apache-2.0"
keywords = ["bitly", "cli", "url", "shortener"]
rust-version = "1.81"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
futures-util = { version = "0.3.31", default-features = false }
hide = { version = "0.1", default-features = false, features = ["serde"] }
home = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
    "default-tls",
    "charset",
    "http2",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
] }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "parking_lot",
] }
url = { version = "2.5", features = ["serde"] }
xdg = "3.0"

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
tempfile = "3.19.1"
tokio-test = "0.4.4"
wiremock = "0.6.3"
